# Monadnock-Cyber-GPG

./: .gitignore  LICENSE  MAC_SETUP.md  NOTICE  README.md  REQUIREMENTS.md  install-mac.command
app/: index.html  package-lock.json  package.json  vite.config.js
app/icon/: generate_icon.py
app/src/: App.jsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/lib/: api.js
app/ui/: app.js  index.html
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
browser-extension/lib/: crypto.js
cli/: Cargo.toml
cli/src/: main.rs
mac-mail/: .gitignore  build.sh  project.yml
mac-mail/Sources/Extension/: Info.plist  MessageSecurityExtension.swift
mac-mail/Sources/Host/: ContentView.swift  Host.entitlements  MonadnockMailApp.swift
mac-mail/Sources/Shared/: Bridging.h  MCCore.swift
mc-core/: Cargo.toml
mc-core/src/: lib.rs
mc-ffi/: Cargo.toml
mc-ffi/include/: mc.h
mc-ffi/src/: lib.rs
